--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,4 @@
+
 * {
   box-sizing: border-box;
   padding: 0;
@@ -6,6 +7,7 @@
 }
 
 body {
+  overflow-x: hidden;
   background: var(--color-bg);
 }
 
